Update responsive sticky header.html
Deleted unused features

--- a/responsive sticky header.html
+++ b/responsive sticky header.html
@@ -36,25 +36,43 @@
 
 <div class="hero">
 
-    <h1><span>I'm a cool</span><br>Navigation</h1>
-
-    <div class="mouse">
-        <span></span>
-    </div>
-
+    <h1><span>Hello</span><br>Project Name</h1>
 </div>
 
 <div class="row content">
     <h1 class="sec01">Section 01</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, recusandae, at, labore velit eligendi amet nobis repellat natus sequi sint consectetur excepturi doloribus vero provident consequuntur accusamus quisquam nesciunt cupiditate soluta alias illo et deleniti voluptates facilis repudiandae similique dolore quaerat architecto perspiciatis officiis dolor ullam expedita suscipit neque minima rem praesentium inventore ab officia quos dignissimos esse quam placeat iste porro eius! Minus, aspernatur nesciunt consectetur. Sit, eius, itaque, porro, beatae impedit officia tenetur reiciendis autem vitae a quae ipsam repudiandae odio dolorum quaerat asperiores possimus corporis optio animi quisquam laboriosam nihil quam voluptatum quidem veritatis iste culpa iure modi perspiciatis recusandae ipsa libero officiis aliquam doloremque similique id quasi atque distinctio enim sapiente ratione in quia eum perferendis earum blanditiis. Nobis, architecto, veniam molestias minus iste necessitatibus est ab in earum ratione eveniet soluta molestiae sed illo nostrum nemo debitis. Minus, quod totam aliquam ea asperiores fugit quaerat excepturi dolores ratione numquam consequatur id unde alias provident vero incidunt exercitationem similique consequuntur hic possimus? Fuga, eveniet quaerat inventore corporis laborum eligendi enim soluta obcaecati aliquid veritatis provident amet laudantium est quisquam dolore exercitationem modi? Distinctio, pariatur, ab velit praesentium vitae quidem consequatur deleniti recusandae odit officiis. Quidem, cupiditate.</p>
+    <p>All writers struggle with when to begin a new paragraph. Yet, in order to maintain coherence, writers must
+know when to make the transition to the next paragraph. If a new idea comes into your writing, you must begin
+a new paragraph. A new idea should only be presented in a new paragraph. If not, the coherence of the paragraph will suffer. New points should begin in the topic sentence of the next paragraph. You can also being a
+new paragraph to contrast the ideas presented in the prior paragraph. Sometimes, you may have a paragraph
+that has become lengthy—a page or more—and needs to be broken apart to maintain the stamina of your work.
+Find a place where your support is fully developed and create another paragraph that will complete the ideas
+presented prior. </p>
     <h1 class="sec02">Section 02</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, recusandae, at, labore velit eligendi amet nobis repellat natus sequi sint consectetur excepturi doloribus vero provident consequuntur accusamus quisquam nesciunt cupiditate soluta alias illo et deleniti voluptates facilis repudiandae similique dolore quaerat architecto perspiciatis officiis dolor ullam expedita suscipit neque minima rem praesentium inventore ab officia quos dignissimos esse quam placeat iste porro eius! Minus, aspernatur nesciunt consectetur. Sit, eius, itaque, porro, beatae impedit officia tenetur reiciendis autem vitae a quae ipsam repudiandae odio dolorum quaerat asperiores possimus corporis optio animi quisquam laboriosam nihil quam voluptatum quidem veritatis iste culpa iure modi perspiciatis recusandae ipsa libero officiis aliquam doloremque similique id quasi atque distinctio enim sapiente ratione in quia eum perferendis earum blanditiis. Nobis, architecto, veniam molestias minus iste necessitatibus est ab in earum ratione eveniet soluta molestiae sed illo nostrum nemo debitis. Minus, quod totam aliquam ea asperiores fugit quaerat excepturi dolores ratione numquam consequatur id unde alias provident vero incidunt exercitationem similique consequuntur hic possimus? Fuga, eveniet quaerat inventore corporis laborum eligendi enim soluta obcaecati aliquid veritatis provident amet laudantium est quisquam dolore exercitationem modi? Distinctio, pariatur, ab velit praesentium vitae quidem consequatur deleniti recusandae odit officiis. Quidem, cupiditate.</p>
+    <p>All writers struggle with when to begin a new paragraph. Yet, in order to maintain coherence, writers must
+know when to make the transition to the next paragraph. If a new idea comes into your writing, you must begin
+a new paragraph. A new idea should only be presented in a new paragraph. If not, the coherence of the paragraph will suffer. New points should begin in the topic sentence of the next paragraph. You can also being a
+new paragraph to contrast the ideas presented in the prior paragraph. Sometimes, you may have a paragraph
+that has become lengthy—a page or more—and needs to be broken apart to maintain the stamina of your work.
+Find a place where your support is fully developed and create another paragraph that will complete the ideas
+presented prior. </p>
     <h1 class="sec03">Section 03</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, recusandae, at, labore velit eligendi amet nobis repellat natus sequi sint consectetur excepturi doloribus vero provident consequuntur accusamus quisquam nesciunt cupiditate soluta alias illo et deleniti voluptates facilis repudiandae similique dolore quaerat architecto perspiciatis officiis dolor ullam expedita suscipit neque minima rem praesentium inventore ab officia quos dignissimos esse quam placeat iste porro eius! Minus, aspernatur nesciunt consectetur. Sit, eius, itaque, porro, beatae impedit officia tenetur reiciendis autem vitae a quae ipsam repudiandae odio dolorum quaerat asperiores possimus corporis optio animi quisquam laboriosam nihil quam voluptatum quidem veritatis iste culpa iure modi perspiciatis recusandae ipsa libero officiis aliquam doloremque similique id quasi atque distinctio enim sapiente ratione in quia eum perferendis earum blanditiis. Nobis, architecto, veniam molestias minus iste necessitatibus est ab in earum ratione eveniet soluta molestiae sed illo nostrum nemo debitis. Minus, quod totam aliquam ea asperiores fugit quaerat excepturi dolores ratione numquam consequatur id unde alias provident vero incidunt exercitationem similique consequuntur hic possimus? Fuga, eveniet quaerat inventore corporis laborum eligendi enim soluta obcaecati aliquid veritatis provident amet laudantium est quisquam dolore exercitationem modi? Distinctio, pariatur, ab velit praesentium vitae quidem consequatur deleniti recusandae odit officiis. Quidem, cupiditate.</p>
+    <p>All writers struggle with when to begin a new paragraph. Yet, in order to maintain coherence, writers must
+know when to make the transition to the next paragraph. If a new idea comes into your writing, you must begin
+a new paragraph. A new idea should only be presented in a new paragraph. If not, the coherence of the paragraph will suffer. New points should begin in the topic sentence of the next paragraph. You can also being a
+new paragraph to contrast the ideas presented in the prior paragraph. Sometimes, you may have a paragraph
+that has become lengthy—a page or more—and needs to be broken apart to maintain the stamina of your work.
+Find a place where your support is fully developed and create another paragraph that will complete the ideas
+presented prior. </p>
     <h1 class="sec04">Section 04</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, recusandae, at, labore velit eligendi amet nobis repellat natus sequi sint consectetur excepturi doloribus vero provident consequuntur accusamus quisquam nesciunt cupiditate soluta alias illo et deleniti voluptates facilis repudiandae similique dolore quaerat architecto perspiciatis officiis dolor ullam expedita suscipit neque minima rem praesentium inventore ab officia quos dignissimos esse quam placeat iste porro eius! Minus, aspernatur nesciunt consectetur. Sit, eius, itaque, porro, beatae impedit officia tenetur reiciendis autem vitae a quae ipsam repudiandae odio dolorum quaerat asperiores possimus corporis optio animi quisquam laboriosam nihil quam voluptatum quidem veritatis iste culpa iure modi perspiciatis recusandae ipsa libero officiis aliquam doloremque similique id quasi atque distinctio enim sapiente ratione in quia eum perferendis earum blanditiis. Nobis, architecto, veniam molestias minus iste necessitatibus est ab in earum ratione eveniet soluta molestiae sed illo nostrum nemo debitis. Minus, quod totam aliquam ea asperiores fugit quaerat excepturi dolores ratione numquam consequatur id unde alias provident vero incidunt exercitationem similique consequuntur hic possimus? Fuga, eveniet quaerat inventore corporis laborum eligendi enim soluta obcaecati aliquid veritatis provident amet laudantium est quisquam dolore exercitationem modi? Distinctio, pariatur, ab velit praesentium vitae quidem consequatur deleniti recusandae odit officiis. Quidem, cupiditate.</p>
+    <p>All writers struggle with when to begin a new paragraph. Yet, in order to maintain coherence, writers must
+know when to make the transition to the next paragraph. If a new idea comes into your writing, you must begin
+a new paragraph. A new idea should only be presented in a new paragraph. If not, the coherence of the paragraph will suffer. New points should begin in the topic sentence of the next paragraph. You can also being a
+new paragraph to contrast the ideas presented in the prior paragraph. Sometimes, you may have a paragraph
+that has become lengthy—a page or more—and needs to be broken apart to maintain the stamina of your work.
+Find a place where your support is fully developed and create another paragraph that will complete the ideas
+presented prior. </p>
 </div>
-
 
 <style>
 .main_h {
@@ -102,7 +120,7 @@
   float: left;
   display: block;
   margin-top: 0;
-  line-height: 1;
+  line-height: 2;
   margin-bottom: 10px;
 }
 @media only screen and (max-width: 766px) {
@@ -222,7 +240,7 @@ p {
 
 .hero {
   position: relative;
-  background: url(http://www.philippefercha.com/cd/toggle-menu-bg.jpg) no-repeat center center fixed;
+  background: url("https://storage.googleapis.com/download.tensorflow.org/example_images/YellowLabradorLooking_new.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -243,37 +261,6 @@ p {
   border-bottom: 2px solid #e8f380;
   padding-bottom: 12px;
   line-height: 3;
-}
-
-.mouse {
-  display: block;
-  margin: 0 auto;
-  width: 26px;
-  height: 46px;
-  border-radius: 13px;
-  border: 2px solid #e8f380;
-  position: absolute;
-  bottom: 40px;
-  position: absolute;
-  left: 50%;
-  margin-left: -26px;
-}
-.mouse span {
-  display: block;
-  margin: 6px auto;
-  width: 2px;
-  height: 2px;
-  border-radius: 4px;
-  background: #e8f380;
-  border: 1px solid transparent;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-name: scroll;
-  animation-name: scroll;
 }
 
 @-webkit-keyframes scroll {
@@ -345,5 +332,6 @@ $('nav a').click(function(event) {
     event.preventDefault();
 });
 </script>
+
 </body>
 </html>
