--- a/responsive sticky header.html
+++ b/responsive sticky header.html
@@ -1,337 +1,396 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title></title>
+  <title></title>
 </head>
+
 <body>
 
-<link href='https://fonts.googleapis.com/css?family=Montserrat|Cardo' rel='stylesheet' type='text/css'>
-<link href='style.css' rel='stylesheet' type='text/css'>
-<script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat|Cardo' rel='stylesheet' type='text/css'>
+  <link href='style.css' rel='stylesheet' type='text/css'>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.js"></script>
 
-  
-<header class="main_h">
+
+  <header class="main_h">
 
     <div class="row">
-        <a class="logo" href="#">Home</a>
+      <a class="logo" href="#">Home</a>
 
-        <div class="mobile-toggle">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+      <div class="mobile-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
 
-        <nav>
-            <ul>
-                <li><a href=".sec01">Section 01</a></li>
-                <li><a href=".sec02">Section 02</a></li>
-                <li><a href=".sec03">Section 03</a></li>
-                <li><a href=".sec04">Section 04</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href=".sec01">Intro</a></li>
+          <li><a href=".sec02">Global Context</a></li>
+          <li><a href=".sec03">Product</a></li>
+          <li><a href=".sec04">Credits</a></li>
+        </ul>
+      </nav>
 
     </div> <!-- / row -->
 
-</header>
+  </header>
 
-<div class="hero">
+  <div class="hero">
 
-    <h1><span>Hello</span><br>Project Name</h1>
-</div>
+    <h1><span>Welcome to</span><br>Neural Style Transfer Online automation</h1>
+  </div>
 
-<div class="row content">
-    <h1 class="sec01">Section 01</h1>
-    <p>All writers struggle with when to begin a new paragraph. Yet, in order to maintain coherence, writers must
-know when to make the transition to the next paragraph. If a new idea comes into your writing, you must begin
-a new paragraph. A new idea should only be presented in a new paragraph. If not, the coherence of the paragraph will suffer. New points should begin in the topic sentence of the next paragraph. You can also being a
-new paragraph to contrast the ideas presented in the prior paragraph. Sometimes, you may have a paragraph
-that has become lengthy—a page or more—and needs to be broken apart to maintain the stamina of your work.
-Find a place where your support is fully developed and create another paragraph that will complete the ideas
-presented prior. </p>
-    <h1 class="sec02">Section 02</h1>
-    <p>All writers struggle with when to begin a new paragraph. Yet, in order to maintain coherence, writers must
-know when to make the transition to the next paragraph. If a new idea comes into your writing, you must begin
-a new paragraph. A new idea should only be presented in a new paragraph. If not, the coherence of the paragraph will suffer. New points should begin in the topic sentence of the next paragraph. You can also being a
-new paragraph to contrast the ideas presented in the prior paragraph. Sometimes, you may have a paragraph
-that has become lengthy—a page or more—and needs to be broken apart to maintain the stamina of your work.
-Find a place where your support is fully developed and create another paragraph that will complete the ideas
-presented prior. </p>
-    <h1 class="sec03">Section 03</h1>
-    <p>All writers struggle with when to begin a new paragraph. Yet, in order to maintain coherence, writers must
-know when to make the transition to the next paragraph. If a new idea comes into your writing, you must begin
-a new paragraph. A new idea should only be presented in a new paragraph. If not, the coherence of the paragraph will suffer. New points should begin in the topic sentence of the next paragraph. You can also being a
-new paragraph to contrast the ideas presented in the prior paragraph. Sometimes, you may have a paragraph
-that has become lengthy—a page or more—and needs to be broken apart to maintain the stamina of your work.
-Find a place where your support is fully developed and create another paragraph that will complete the ideas
-presented prior. </p>
-    <h1 class="sec04">Section 04</h1>
-    <p>All writers struggle with when to begin a new paragraph. Yet, in order to maintain coherence, writers must
-know when to make the transition to the next paragraph. If a new idea comes into your writing, you must begin
-a new paragraph. A new idea should only be presented in a new paragraph. If not, the coherence of the paragraph will suffer. New points should begin in the topic sentence of the next paragraph. You can also being a
-new paragraph to contrast the ideas presented in the prior paragraph. Sometimes, you may have a paragraph
-that has become lengthy—a page or more—and needs to be broken apart to maintain the stamina of your work.
-Find a place where your support is fully developed and create another paragraph that will complete the ideas
-presented prior. </p>
-</div>
+  <div class="row content">
+    <h1 class="sec01">Introduction to my project</h1>
+    <p>
+      Program about neural style transfer
+      This program is able to combine 2 different images into a single one
+      With condition of a content and style image of combination
+    </p>
 
-<style>
-.main_h {
-  position: fixed;
-  top: 0px;
-  max-height: 70px;
-  z-index: 999;
-  width: 100%;
-  padding-top: 17px;
-  background: none;
-  overflow: hidden;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  opacity: 0;
-  top: -100px;
-  padding-bottom: 6px;
-  font-family: "Montserrat", sans-serif;
-}
-@media only screen and (max-width: 766px) {
-  .main_h {
-    padding-top: 25px;
-  }
-}
+    <img src="nst_result.png" width="500" height="300">
+    <p>Figure 1: Example picture of the structure between content and style and stylized content images/results</p>
 
-.open-nav {
-  max-height: 400px !important;
-}
-.open-nav .mobile-toggle {
-  transform: rotate(-90deg);
-  -webkit-transform: rotate(-90deg);
-}
+    <h1 class="sec02">Global Context Connections</h1>
+    <p>
+      Chosen global context is about personal and cultural expressions
+      Because of the representative images from the stylized content image
+    </p>
 
-.sticky {
-  background-color: rgba(255, 255, 255, 0.93);
-  opacity: 1;
-  top: 0px;
-  border-bottom: 1px solid gainsboro;
-}
+    <h1 class="sec03">Product Model</h1>
+    <h2>
+      Advantage and Disadvantage of High Quality process and fast process implementations
+    </h2>
+    <p>
+      Fast process:
+      Advantage is that the fast processing from the name itself, it's much faster to process the AI
+      Disadvantage is that the final result/stylized content image is not better or the same as the high-quality process
 
-.logo {
-  width: 50px;
-  font-size: 25px;
-  color: #8f8f8f;
-  text-transform: uppercase;
-  float: left;
-  display: block;
-  margin-top: 0;
-  line-height: 2;
-  margin-bottom: 10px;
-}
-@media only screen and (max-width: 766px) {
-  .logo {
-    float: none;
-  }
-}
+      High quality process:
+      Advantage is that the result of the image/stylized content image will have better quality result
+      Disadvantage is that the users need to take more time to wait for the proess is finished
+    </p>
 
-nav {
-  float: right;
-  width: 60%;
-}
-@media only screen and (max-width: 766px) {
-  nav {
-    width: 100%;
-  }
-}
-nav ul {
-  list-style: none;
-  overflow: hidden;
-  text-align: right;
-  float: right;
-}
-@media only screen and (max-width: 766px) {
-  nav ul {
-    padding-top: 10px;
-    margin-bottom: 22px;
-    float: left;
-    text-align: center;
-    width: 100%;
-  }
-}
-nav ul li {
-  display: inline-block;
-  margin-left: 35px;
-  line-height: 1.5;
-}
-@media only screen and (max-width: 766px) {
-  nav ul li {
-    width: 100%;
-    padding: 7px 0;
-    margin: 0;
-  }
-}
-nav ul a {
-  color: #888888;
-  text-transform: uppercase;
-  font-size: 12px;
-}
+    <!-- Product/Model of the AI 
+    For the AI model, it needs to be used tensorflowjs implementation from python code
+    Tensorflowjs implementation, with javascript and JSON file integrations
+    -->
 
-.mobile-toggle {
-  display: none;
-  cursor: pointer;
-  font-size: 20px;
-  position: absolute;
-  right: 22px;
-  top: 0;
-  width: 30px;
-  -webkit-transition: all 200ms ease-in;
-  -moz-transition: all 200ms ease-in;
-  transition: all 200ms ease-in;
-}
-@media only screen and (max-width: 766px) {
-  .mobile-toggle {
-    display: block;
-  }
-}
-.mobile-toggle span {
-  width: 30px;
-  height: 4px;
-  margin-bottom: 6px;
-  border-radius: 1000px;
-  background: #8f8f8f;
-  display: block;
-}
+    <p>
+      The inputs are above and there are 2 boxes,
+      First is the input images for the content image. The stylized content image will have based picture from the
+      content image
 
-.row {
-  width: 100%;
-  max-width: 940px;
-  margin: 0 auto;
-  position: relative;
-  padding: 0 2%;
-}
+      Second is the input images for the style image. The stylized content image will have theme or aesthethics based
+      picture from the style image
+    </p>
 
-* {
-  box-sizing: border-box;
-}
+    <img src="nst_result.png" width="500" height="300">
+    <p>Figure 2: Illustraction of the content and style and stylized content image
+    </p>
 
-body {
-  color: #8f8f8f;
-  background: white;
-  font-family: "Cardo", serif;
-  font-weight: 300;
-  -webkit-font-smoothing: antialiased;
-}
+    <h1 class="sec04">Credits</h1>
+    <h2>
+      Tools and Libraries and Frameworks used
+    </h2>
+    <p>
+      1. Tensorflow integrated with Keras
+    </p>
+    <p>
+      2. Netlify
+    </p>
+    <p>
+      3. Google Colaboratory
+    </p>
+    <h2>
+      Sources and Important topics about the AI and website
+    </h2>
+    <p>
+      Link Sources
+      Freecodecamp
+      w3school
+      tensorflow
+      keras
+      netlify
+      dev ed
+      research papers
+      etc
+    </p>
+  </div>
 
-a {
-  text-decoration: none;
-}
+  <style>
+    .main_h {
+      position: fixed;
+      top: 0px;
+      max-height: 70px;
+      z-index: 999;
+      width: 100%;
+      padding-top: 17px;
+      background: none;
+      overflow: hidden;
+      -webkit-transition: all 0.3s;
+      transition: all 0.3s;
+      opacity: 0;
+      top: -100px;
+      padding-bottom: 6px;
+      font-family: "Montserrat", sans-serif;
+    }
 
-h1 {
-  font-size: 30px;
-  line-height: 1.8;
-  text-transform: uppercase;
-  font-family: "Montserrat", sans-serif;
-}
+    @media only screen and (max-width: 766px) {
+      .main_h {
+        padding-top: 25px;
+      }
+    }
 
-p {
-  margin-bottom: 20px;
-  font-size: 17px;
-  line-height: 2;
-}
+    .open-nav {
+      max-height: 400px !important;
+    }
 
-.content {
-  padding: 50px 2% 250px;
-}
+    .open-nav .mobile-toggle {
+      transform: rotate(-90deg);
+      -webkit-transform: rotate(-90deg);
+    }
 
-.hero {
-  position: relative;
-  background: url("https://storage.googleapis.com/download.tensorflow.org/example_images/YellowLabradorLooking_new.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  text-align: center;
-  color: #fff;
-  padding-top: 110px;
-  min-height: 500px;
-  letter-spacing: 2px;
-  font-family: "Montserrat", sans-serif;
-}
-.hero h1 {
-  font-size: 50px;
-  line-height: 1.3;
-}
-.hero h1 span {
-  font-size: 25px;
-  color: #e8f380;
-  border-bottom: 2px solid #e8f380;
-  padding-bottom: 12px;
-  line-height: 3;
-}
+    .sticky {
+      background-color: rgba(255, 255, 255, 0.93);
+      opacity: 1;
+      top: 0px;
+      border-bottom: 1px solid gainsboro;
+    }
 
-@-webkit-keyframes scroll {
-  0% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
+    .logo {
+      width: 50px;
+      font-size: 25px;
+      color: #8f8f8f;
+      text-transform: uppercase;
+      float: left;
+      display: block;
+      margin-top: 0;
+      line-height: 2;
+      margin-bottom: 10px;
+    }
 
-  100% {
-    opacity: 0;
-    -webkit-transform: translateY(20px);
-    transform: translateY(20px);
-  }
-}
-@keyframes scroll {
-  0% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-    -ms-transform: translateY(0);
-    transform: translateY(0);
-  }
+    @media only screen and (max-width: 766px) {
+      .logo {
+        float: none;
+      }
+    }
 
-  100% {
-    opacity: 0;
-    -webkit-transform: translateY(20px);
-    -ms-transform: translateY(20px);
-    transform: translateY(20px);
-  }
-}
+    nav {
+      float: right;
+      width: 60%;
+    }
 
-</style>
+    @media only screen and (max-width: 766px) {
+      nav {
+        width: 100%;
+      }
+    }
 
-<script>
+    nav ul {
+      list-style: none;
+      overflow: hidden;
+      text-align: right;
+      float: right;
+    }
+
+    @media only screen and (max-width: 766px) {
+      nav ul {
+        padding-top: 10px;
+        margin-bottom: 22px;
+        float: left;
+        text-align: center;
+        width: 100%;
+      }
+    }
+
+    nav ul li {
+      display: inline-block;
+      margin-left: 35px;
+      line-height: 1.5;
+    }
+
+    @media only screen and (max-width: 766px) {
+      nav ul li {
+        width: 100%;
+        padding: 7px 0;
+        margin: 0;
+      }
+    }
+
+    nav ul a {
+      color: #888888;
+      text-transform: uppercase;
+      font-size: 12px;
+    }
+
+    .mobile-toggle {
+      display: none;
+      cursor: pointer;
+      font-size: 20px;
+      position: absolute;
+      right: 22px;
+      top: 0;
+      width: 30px;
+      -webkit-transition: all 200ms ease-in;
+      -moz-transition: all 200ms ease-in;
+      transition: all 200ms ease-in;
+    }
+
+    @media only screen and (max-width: 766px) {
+      .mobile-toggle {
+        display: block;
+      }
+    }
+
+    .mobile-toggle span {
+      width: 30px;
+      height: 4px;
+      margin-bottom: 6px;
+      border-radius: 1000px;
+      background: #8f8f8f;
+      display: block;
+    }
+
+    .row {
+      width: 100%;
+      max-width: 940px;
+      margin: 0 auto;
+      position: relative;
+      padding: 0 2%;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      color: #8f8f8f;
+      background: white;
+      font-family: "Cardo", serif;
+      font-weight: 300;
+      -webkit-font-smoothing: antialiased;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    h1 {
+      font-size: 30px;
+      line-height: 1.8;
+      text-transform: uppercase;
+      font-family: "Montserrat", sans-serif;
+    }
+
+    p {
+      margin-bottom: 20px;
+      font-size: 17px;
+      line-height: 2;
+    }
+
+    .content {
+      padding: 50px 2% 250px;
+    }
+
+    .hero {
+      position: relative;
+      background: url("https://media.gettyimages.com/videos/abstract-ai-brain-neural-network-formed-of-neurons-and-connections-in-video-id1150835229?s=640x640") no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      background-size: cover;
+      text-align: center;
+      color: #fff;
+      padding-top: 100px;
+      min-height: 650px;
+      letter-spacing: 2px;
+      font-family: "Montserrat", sans-serif;
+    }
+
+    .hero h1 {
+      font-size: 50px;
+      line-height: 1.3;
+    }
+
+    .hero h1 span {
+      font-size: 25px;
+      color: #e8f380;
+      border-bottom: 2px solid #e8f380;
+      padding-bottom: 12px;
+      line-height: 3;
+    }
+
+    @-webkit-keyframes scroll {
+      0% {
+        opacity: 1;
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+      }
+
+      100% {
+        opacity: 0;
+        -webkit-transform: translateY(20px);
+        transform: translateY(20px);
+      }
+    }
+
+    @keyframes scroll {
+      0% {
+        opacity: 1;
+        -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+        transform: translateY(0);
+      }
+
+      100% {
+        opacity: 0;
+        -webkit-transform: translateY(20px);
+        -ms-transform: translateY(20px);
+        transform: translateY(20px);
+      }
+    }
+  </style>
+
+  <script>
     // Sticky Header
-$(window).scroll(function() {
+    $(window).scroll(function () {
 
-    if ($(window).scrollTop() > 100) {
+      if ($(window).scrollTop() > 100) {
         $('.main_h').addClass('sticky');
-    } else {
+      } else {
         $('.main_h').removeClass('sticky');
-    }
-});
+      }
+    });
 
-// Mobile Navigation
-$('.mobile-toggle').click(function() {
-    if ($('.main_h').hasClass('open-nav')) {
+    // Mobile Navigation
+    $('.mobile-toggle').click(function () {
+      if ($('.main_h').hasClass('open-nav')) {
         $('.main_h').removeClass('open-nav');
-    } else {
+      } else {
         $('.main_h').addClass('open-nav');
-    }
-});
+      }
+    });
 
-$('.main_h li a').click(function() {
-    if ($('.main_h').hasClass('open-nav')) {
+    $('.main_h li a').click(function () {
+      if ($('.main_h').hasClass('open-nav')) {
         $('.navigation').removeClass('open-nav');
         $('.main_h').removeClass('open-nav');
-    }
-});
+      }
+    });
 
-// navigation scroll lijepo radi materem
-$('nav a').click(function(event) {
-    var id = $(this).attr("href");
-    var offset = 70;
-    var target = $(id).offset().top - offset;
-    $('html, body').animate({
+    // navigation scroll lijepo radi materem
+    $('nav a').click(function (event) {
+      var id = $(this).attr("href");
+      var offset = 70;
+      var target = $(id).offset().top - offset;
+      $('html, body').animate({
         scrollTop: target
-    }, 500);
-    event.preventDefault();
-});
-</script>
+      }, 500);
+      event.preventDefault();
+    });
+  </script>
 
 </body>
+
 </html>
