--- a/responsive sticky header.html
+++ b/responsive sticky header.html
@@ -253,7 +253,7 @@
 
       <nav>
         <ul>
-          <li><a href=".Intro">Intro</a></li>
+          <li><a href=".Intro">Introduction</a></li>
           <li><a href=".Global_Context">Global Context</a></li>
           <li><a href=".Product">Product</a></li>
           <li><a href=".Credits">Credits</a></li>
