Update both files
In main_model_js.html, there are some tasks  configuring about the javascript functions and elements inside of the html snippet code.
Configuring about the input and output images and not numbers from users, configure and connect the images and also for running the model and not the prediction model elements.
I think I might need to see the other examples code that connects and configures about the code.

--- a/responsive sticky header.html
+++ b/responsive sticky header.html
@@ -44,13 +44,13 @@
 
     .logo {
       width: 50px;
-      font-size: 25px;
+      font-size: 30px;
       color: #8f8f8f;
       text-transform: uppercase;
       float: left;
       display: block;
       margin-top: 0;
-      line-height: 2;
+      line-height: 1.5;
       margin-bottom: 10px;
     }
 
@@ -62,7 +62,7 @@
 
     nav {
       float: right;
-      width: 60%;
+      width: 80%;
     }
 
     @media only screen and (max-width: 766px) {
@@ -260,7 +260,7 @@
         </ul>
       </nav>
 
-    </div> <!-- / row -->
+    </div>
 
   </header>
 
