Add and manage new folders
The folders are about the model.json and .bin files from the style transfer of tensorflow docs and style transfer from keras docs.
They have been managed into different folders for each of the files.

--- a/main.html
+++ b/main.html
@@ -273,7 +273,7 @@
     <h1 class="Intro">Introduction to my project</h1>
     <p>
       Program about neural style transfer
-      This program is able to combine 2 different images into a single piece of artwork, with a condition for a content and style image needed for input for image processing blending altogether. The program is also allow the users for ocnfiguring the program witheir inputs and outputs and extra configurations with also that the things inside of them.
+      This program is able to combine 2 different images into a single piece of artwork, with a condition for a content and style image needed for input for image processing blending altogether.
     </p>
 
     <img src="nst_result.png" width="500" height="300">
