--- a/main.html
+++ b/main.html
@@ -233,6 +233,20 @@
         transform: translateY(20px);
       }
     }
+
+    .container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  width: 100%;
+  }
+
+  .left {
+    width: 50px;
+    max-width: 800px;
+    background: #2d1832;
+    text-align: center;
+  }
   </style>
 
   <link href='https://fonts.googleapis.com/css?family=Montserrat|Cardo' rel='stylesheet' type='text/css'>
@@ -316,6 +330,26 @@
     <img src="nst_result.png" width="500" height="300">
     <p>Figure 2: Illustraction of the content and style and stylized content image
     </p>
+
+
+
+    
+    <div class="container">
+      <div class="left">
+        <div class="frame">
+          <h2>Step 1. <label>upload photo <input type="file" onchange="loadContent(event)"></label></h2>
+          <img id="content" class="image" crossorigin="anonymous" />
+        </div>
+        <div class="right">
+          <div class="frame">
+            <h2>Step 2. <label>upload style <input type="file" onchange="loadStyle(event)"></label></h2>
+            <img id="style" class="image" crossorigin="anonymous" />
+          </div>
+        </div>
+      </div>
+
+
+
 
     <h1 class="Credits">Credits</h1>
     <h2>
