--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
     <script src="jquery.js"></script>
     
     <style>
-      {.scanning
+      .scanning
+      {
     margin:auto;
     position:relative;
     width:100%;
@@ -461,11 +462,11 @@
     font-weight: 700;
     font-size: 1.25rem;
     padding: 10px 30px;
+    position: relative;
   }
 
   .btn-transfer:hover {
     color: #f1e5e6;
-    background: #da78c4;
   }
 
   #transfering {
@@ -991,5 +992,4 @@
   </script>
 
 </body>
-
 </html>
