--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
     </p>
 
     <!--Product of the AU model-->
+    <!--Also a Product of the AU model-->
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
